2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* configure.ac: Increase version.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Introduce en@cyrillic en@hebrew en@arabic and en@greek.

	* po/Rules-translit: New file.
	* po/arabic.sed: Likewise.
	* po/cyrillic.sed: Likewise.
	* po/greek.sed: Likewise.
	* po/hebrew.sed: Likewise.
	* po/README: Add en@cyrillic en@hebrew en@arabic and en@greek.
	* po/Makefile.in.in: Add extra_dist4.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	Handle big-endian minixfs (fixes minixfs tests on bigendian).

	* grub-core/fs/minix.c: Replace le with minix. Add necessary defines,
	modify names. Introduce MODE_BIGENDIAN.
	* grub-core/fs/minix_be.c: New file.
	* grub-core/fs/minix2_be.c: Likewise
	* grub-core/fs/minix3_be.c: Likewise.
	* Makefile.util.def (libgrubmods): Add minix_be, minix2_be and
	minix3_be.
	* grub-core/Makefile.core.def (minix_be): New module.
	(minix2_be): Likewise.
	(minix3_be): Likewise.

2012-04-01  Felix <email@hamburg.de>

	* grub-core/loader/efi/appleloader.c (devpath_7): New var.
	(devs): Add MBP 2011.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/font/font.c (blit_comb): Handle dagesh somewhat.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/normal/cmdline.c (print_completion): New field
	prompt_len.
	(grub_cmdline_get): Handle width properly.

2012-04-01  Vladimir Serbinenko  <phcoder@gmail.com>

	* grub-core/commands/lsacpi.c (options): Add missing terminator.

2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>

	* include/grub/datetime.h (grub_datetime2unixtime): Fix handling of days
	after 29th of February.

2012-03-31  Vladimir Serbinenko  <phcoder@gmail.com>

	Fix exfat endianness handling.

	* grub-core/fs/fat.c (grub_fat_data): Make fat_sector 32-bit.
	(grub_fat_mount) [MODE_EXFAT]: Fix bpb.num_reserved_sectors byte-swap.
	(grub_fat_iterate_dir) [MODE_EXFAT]: Fix attr byte-swap.
	Byte-swap utf16 when necessary.